<?xml version="1.0"?>
<package format="2">
  <name>rslidar_sdk</name>
  <version>1.5.0</version>
  <description>The rslidar_sdk package</description>
  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>launch</depend>
  <depend>nav2_util</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rslidar_msg</depend>
  <export>
     <build_type>ament_cmake</build_type>
  </export>

</package>
